fix(cli): stop a foreign flag's value being opened as a file
Closes #791. fileTargets treated every token without a leading dash as a
file to open, so a two-token flag Editora does not define — any JVM flag
that leaks into the program arguments — had its *value* resolved against
the working directory and opened:

    Failed to open: <cwd>/javafx.graphics/com.sun.glass.ui=com.editora

A token directly after a *foreign* option is now admitted only if it
exists on disk.

Deliberately not the blanket must-exist rule the issue proposed. A
missing path today reaches openPath and reports "Failed to open:
typo.txt"; requiring existence everywhere would silently swallow a
typo'd filename, trading a useful error for nothing. So the check is
scoped to the one ambiguous position, and `editora typo.txt` /
`editora --zen typo.txt` still report as before.

Keyed on Editora's own option set rather than a list of JVM flags to
skip. That list would go stale the way commandsForAllServers did (#723);
this one we own, and if it does drift the cost is one missing-file
message rather than a broken feature.

The issue's option 1 would not have fixed the reported case: "contains =
with no path separator before it" does not match
javafx.graphics/com.sun.glass.ui=com.editora, which has a / before the =.

No `--` end-of-options separator: eleven independent scanners parse these
arguments, so only fileTargets would honour it and `editora -- --zen`
would open a file *and* enter Zen mode. It would only ever matter for a
not-yet-existing file directly after a foreign flag, since a file that is
really there already wins.

Also guards InvalidPathException — a leaked value need not be
representable as a path at all, and Path.of would otherwise throw
straight out of start() and fail the launch.

The on-disk check is injected so the decision stays pure and unit-
testable (the PathKeys.findKeyByIdentity idiom). Verified the new test
fails against the old rule, producing exactly the reported target.

Co-